<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_edit_image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aki.photoeditor.udacity_capstone.EditImageFragment"
    tools:showIn="@layout/activity_edit_image">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/buttonsContainer">
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/undoButton"
            android:id="@+id/undoButton"
            android:contentDescription="@string/undoButtonImgLoaded"
            android:textColor="@color/colorText"
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="1"
            android:onClick="processImage"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/saveImageButton"
            android:id="@+id/saveImageButton"
            android:textColor="@color/colorText"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/saveButtonDescription"
            android:layout_weight="1"
            android:onClick="saveImageFinal"/>
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:layout_margin="10dp"
        android:layout_below="@+id/buttonsContainer">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/blurButton"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:contentDescription="@string/blurImage"
            android:textColor="@color/colorText"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/blurButton"
            android:onClick="processImage" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/rotateButton"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:contentDescription="@string/rotateButton"
            android:textColor="@color/colorText"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/rotateButton"
            android:onClick="processImage" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/brightnessButton"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:textColor="@color/colorText"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/brightnessButton"
            android:contentDescription="@string/brightnessDescription"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/sharpenButton"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:textColor="@color/colorText"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="processImage"
            android:text="@string/sharpenButton"
            android:contentDescription="@string/sharpenButton"/>

            <Button
                android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/mirrorHor6"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
                android:textColor="@color/colorText"
                android:background="?android:attr/selectableItemBackground"
            android:onClick="processImage"
            android:text="@string/mirrorHorButton"
                android:contentDescription="@string/flip_h_description"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/mirrorVert6"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:textColor="@color/colorText"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="processImage"
            android:text="@string/mirrorVertButton"
            android:contentDescription="@string/flip_v_description"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/grayScaleEffectButton"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:textColor="@color/colorText"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/grayScaleButtonText"
            android:onClick="processImage"
            android:contentDescription="@string/gray_description"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/filterButton1"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:contentDescription="@string/filter1_description"
                android:textColor="@color/colorText"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/filter1"
                android:onClick="processImage" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/filterButton2"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:contentDescription="@string/filter2_description"
                android:textColor="@color/colorText"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/filter2"
                android:onClick="processImage" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/filterButton3"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:contentDescription="@string/filter3_desc"
                android:textColor="@color/colorText"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/filter3"
                android:onClick="processImage" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/filterButton4"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:contentDescription="@string/filter4_desc"
                android:textColor="@color/colorText"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/filter4"
                android:onClick="processImage" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/filterButton5"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:contentDescription="@string/filter5"
                android:textColor="@color/colorText"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/filter5"
                android:onClick="processImage" />

        </LinearLayout>

    </HorizontalScrollView>
</RelativeLayout>
