<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aki.photoeditor.udacity_capstone.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/wallpaperProgress"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/greetingWallpaper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:contentDescription="@string/wallpaper_description"/>
        <android.support.design.widget.FloatingActionButton
            app:fabSize="normal"
            android:id="@+id/downloadWallpaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/download_wallpaper_description"
            app:elevation="6dp"
            android:src="@drawable/ic_file_download_white_48dp"
            android:layout_margin="16dp"
            android:onClick="downloadWallpaper"
            android:nextFocusDown="@+id/cameraButton" />
        <TextView
            android:id="@+id/notConnected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/notConnected"
            android:contentDescription="@string/notConnected"
            android:textColor="@color/colorText"
            android:textSize="30sp"
            android:textAlignment="center"
            android:visibility="gone"/>
    </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/img_desc_camera"
                android:src="@drawable/ic_camera_alt_white_24dp"
                android:background="@color/colorPrimaryDark"
                android:onClick="loadImageFromCamera"
                android:id="@+id/cameraButton"
                android:nextFocusUp="@id/downloadWallpaper"
                android:nextFocusDown="@+id/galleryButton"/>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/img_desc_photo"
                android:src="@drawable/ic_image_white_24dp"
                android:background="@color/colorPrimaryDark"
                android:onClick="loadImageFromGallery"
                android:id="@+id/galleryButton"
                android:nextFocusUp="@id/cameraButton"/>
        </LinearLayout>

</LinearLayout>
